force-app/main/default/objects/OrganizationTarget__c/OrganizationTarget__c.object-meta.xml
<CustomObject>
    <label>ORG Target</label>
    <nameField>
        <displayFormat>OT-{000000}</displayFormat>
        <label>ORGANIZATION TARGET ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ORG Target</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>