force-app/main/default/objects/OrganizationTarget__c/fields/AnnaulTarget__c.field-meta.xml
<CustomField>
    <fullName>AnnaulTarget__c</fullName>
    <label>ANNUAL TARGET</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>