force-app/main/default/objects/OrganizationTarget__c/fields/HierarchyLevel__c.field-meta.xml
<CustomField>
    <fullName>HierarchyLevel__c</fullName>
    <label>HIERARCHY LEVEL</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HierarchyLevel</valueSetName>
    </valueSet>
</CustomField>