force-app/main/default/objects/OrganizationTarget__c/fields/MonthlyTarget__c.field-meta.xml
<CustomField>
    <fullName>MonthlyTarget__c</fullName>
    <formula>AnnaulTarget__c  / 12</formula>
    <label>MONTHLY TARGET</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>