force-app/main/default/objects/OrganizationTarget__c/fields/MonthlyTargetFromIndividuals__c.field-meta.xml
<CustomField>
    <fullName>MonthlyTargetFromIndividuals__c</fullName>
    <label>MONTHLY TARGET FROM INDIVIDUALS</label>
    <summarizedField>IndividualTarget__c.MonthlyTarget__c</summarizedField>
    <summaryForeignKey>IndividualTarget__c.OrganizationTargetID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>