force-app/main/default/objects/OrganizationTarget__c/fields/NumberOfIndividualForAllocation__c.field-meta.xml
<CustomField>
    <fullName>NumberOfIndividualForAllocation__c</fullName>
    <label>NUMBER OF INDIVIDUALS FOR ALLOCATION</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>