force-app/main/default/objects/OrganizationTarget__c/fields/OrganizationTargetName__c.field-meta.xml
<CustomField>
    <fullName>OrganizationTargetName__c</fullName>
    <label>ORGANIZATION TARGET NAME</label>
    <length>255</length>
    <type>Text</type>
</CustomField>