force-app/main/default/objects/OrganizationTarget__c/fields/TargetAllocationToIndividual__c.field-meta.xml
<CustomField>
    <fullName>TargetAllocationToIndividual__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TARGET ALLOCATION TO INDIVIDUAL</label>
    <type>Checkbox</type>
</CustomField>